Fix elements to verify report

--- a/PMCTool.App/Resources/SharedResource.en-US.resx
+++ b/PMCTool.App/Resources/SharedResource.en-US.resx
@@ -3061,4 +3061,7 @@
   <data name="Analytics5_024" xml:space="preserve">
     <value>Select a project</value>
   </data>
+  <data name="ActionsToMake" xml:space="preserve">
+    <value>Actions to Make</value>
+  </data>
 </root>
