--- a/PMCTool.App/Resources/SharedResource.es-MX.resx
+++ b/PMCTool.App/Resources/SharedResource.es-MX.resx
@@ -3058,10 +3058,13 @@
   <data name="Analytics5_023" xml:space="preserve">
     <value>Exportar a Excel</value>
   </data>
+  <data name="Analytics5_024" xml:space="preserve">
+    <value>Seleccione un proyecto</value>
+  </data>
   <data name="String1" xml:space="preserve">
     <value />
   </data>
-  <data name="Analytics5_024" xml:space="preserve">
-    <value>Seleccione un proyecto</value>
+  <data name="ActionsToMake" xml:space="preserve">
+    <value>Acciones a Realizar</value>
   </data>
 </root>
