--- a/PMCTool.App/Resources/SharedResource.en-US.resx
+++ b/PMCTool.App/Resources/SharedResource.en-US.resx
@@ -3064,4 +3064,7 @@
   <data name="ActionsToMake" xml:space="preserve">
     <value>Actions to Make</value>
   </data>
+  <data name="ProjectSheet" xml:space="preserve">
+    <value>Project sheet</value>
+  </data>
 </root>
