--- a/PMCTool.App/Resources/SharedResource.en-US.resx
+++ b/PMCTool.App/Resources/SharedResource.en-US.resx
@@ -925,7 +925,7 @@
     <value>Work areas</value>
   </data>
   <data name="ProjectPhase" xml:space="preserve">
-    <value>Project phase</value>
+    <value>PROJECT PHASE</value>
   </data>
   <data name="LoadTemplate" xml:space="preserve">
     <value>Load template</value>
