--- a/PMCTool.App/Resources/SharedResource.es-MX.resx
+++ b/PMCTool.App/Resources/SharedResource.es-MX.resx
@@ -3103,9 +3103,6 @@
   <data name="IdentifiedRisks" xml:space="preserve">
     <value>Riesgos identificados</value>
   </data>
-  <data name="String1" xml:space="preserve">
-    <value />
-  </data>
   <data name="ActivitiesWithDelay" xml:space="preserve">
     <value>Actividades con retrazo</value>
   </data>
@@ -3114,5 +3111,11 @@
   </data>
   <data name="AssignedResources" xml:space="preserve">
     <value>Recursos Asignados</value>
+  </data>
+  <data name="String1" xml:space="preserve">
+    <value />
+  </data>
+  <data name="hoursByProject" xml:space="preserve">
+    <value>Horas por proyecto</value>
   </data>
 </root>
