--- a/PMCTool.App/Resources/SharedResource.es-MX.resx
+++ b/PMCTool.App/Resources/SharedResource.es-MX.resx
@@ -3112,10 +3112,13 @@
   <data name="AssignedResources" xml:space="preserve">
     <value>Recursos Asignados</value>
   </data>
+  <data name="hoursByProject" xml:space="preserve">
+    <value>Horas por proyecto</value>
+  </data>
   <data name="String1" xml:space="preserve">
     <value />
   </data>
-  <data name="hoursByProject" xml:space="preserve">
-    <value>Horas por proyecto</value>
+  <data name="ProjectsControl" xml:space="preserve">
+    <value>Control de Proyectos</value>
   </data>
 </root>
